--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="unknown_string">Fill in this later</string>
+    <string name="Username"></string>
+    <string name="password"></string>
+    <string name="username"></string>
 
 </resources>
