--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Httpget</string>
+    <string name="app_name">DataCollector</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="unknown_string">Fill in this later</string>
-    <string name="Username"></string>
-    <string name="password"></string>
-    <string name="username"></string>
-
+    <string name="hello">Hello World, PhonesecmanActivity!</string>
+    <string name="basic_info">基本信息</string>
+    <string name="process_info">进程信息</string>
+    <string name="service_info">服务信息</string>
+    <string name="firewall">防火墙</string>
+    <string name="OK">确认</string>
+    <string name="cancel">取消</string>
+    <string name="error">错误</string>
+    <string name="collecting_info">收集信息</string>
+    <string name="please_wait">请稍候</string>
+	<string name="refresh">刷新</string>
+	<string name="device_info">设备信息</string>
+	<string name="cpu_info">CPU信息</string>
+	<string name="mem_info">内存信息</string>
+	<string name="Mode">模式</string>
+	<string name="mode_whitelist">白名单模式</string>
+	<string name="mode_blacklist">黑名单模式</string>
+	<string name="Select_Mode">选择模式</string>
+	<string name="title_enabled">DroidWall v%s</string>
+    <string name="title_disabled">DroidWall v%s (防火墙已禁用)</string>
+    <string name="mode_header">模式: %s</string>
+    <string name="fw_enabled">防火墙已启用</string>
+    <string name="fw_disabled">防火墙已禁用</string>
+    <string name="applying_rules">应用iptables规则.</string>
+    <string name="saving_rules">保存iptables规则.</string>
+    <string name="deleting_rules">删除iptables规则.</string>
+    <string name="rules_applied">规则应用成功</string>
+    <string name="rules_saved">规则保存成功</string>
+    <string name="rules_deleted">规则删除成功</string>
+    <string name="showrules">显示规则</string>
+    <string name="applyrules">应用规则</string>
+    <string name="saverules">保存规则</string>
+    <string name="purgerules">清空规则</string>
+    <string name="working">工作中...</string>
+    <string name="unsaved_changes">未保存更改</string>
+    <string name="unsaved_changes_message">有未保存更改.\n你想保存还是丢弃它们?</string>
+    <string name="apply">应用</string>
+    <string name="discard">丢弃</string>
+    <string name="fw_status">   状态：%s</string>
+    <string name="txt_wifi">WiFi</string>
+    <string name="txt_3g">3G</string>
 </resources>
